--- a/style.css
+++ b/style.css
@@ -1,158 +1,48 @@
-/* #region page */
-.page {
-  font-family: "Manrope", sans-serif;
-  color: #1B2129;
-  font-size: 16px;
-  scroll-behavior: smooth;
-}
-.page__body {
-  margin: 0;
-}
-.page__menu {
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-
-  opacity: 0;
-  pointer-events: none;
-}
-.page__menu:target {
-  opacity: 1;
-  pointer-events: all;
-}
-/* end region */
-
-/* #region header */
-.header {
-  box-sizing: border-box;
-  height: 100vh;
-  background-image: url('images/head-picture.png');
-  background-size: cover;
-  background-position: center;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  }
-
-
-.header__title {
-  margin: 0;
-  color: #FFFFFF;
-  ;
-  font-family: Manrope;
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 36px;
-  text-align: left;
-  text-underline-position: from-font;
-  text-decoration-skip-ink: none;
-  }
-  .header__bottom {
-    padding: 0 20px 40px;
-  }
-/* end region */
-
-/* #region menu */
-.top-bar {
-  padding: 24px 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.top-bar__icons {
-  display: flex;
-  gap: 24px;
-  }
-
-  .top-bar__logo {
-    display: flex;
-  }
-
-.menu {
-  box-sizing: border-box;
-  height: 100vh;
-  background-color: #F9F9F9;
-  font-weight: 700;
-  text-transform: uppercase;
-}
-
-.menu__top {
-  margin-bottom: 32px;
-}
-
-.menu__nav {
-  margin-bottom: 48px;
-}
-
-.menu__content {
-  padding-inline: 20px;
-}
-
-.menu__phone-number {
-  display: block;
-  margin-bottom: 16px;
-  font-size: 16px;
-  line-height: 22px;
-  color: inherit;
-  text-decoration: none;
-}
-
-.menu__call-to-order {
-  display: block;
-  width: fit-content;
-
-  padding-bottom: 4px;
-  border-bottom: 1px solid #1B2129;
-  color: inherit;
-  text-decoration: none;
-  font-size: 16px;
-  line-height: 22px;
-  letter-spacing: 2px;
-
-}
-/* end region */
-
-/* #region icon */
-.icon {
-  display: block;
-  height: 24px;
-  width: 24px;
-
-}
-.icon--phone {
-background-image: url('images/Phone-number.png');
-}
-.icon--menu {
-background-image: url('images/Icon-Burger-menu.png');
-}
-.icon--close {
-  background-image: url('images/Icon-Close.png');
-}
-
-/* end #endregion */
-
-/* #region nav */
-.nav__link {
-  color: inherit;
-  text-decoration: none;
-  font-size: 22px;
-  line-height: 22px;
-  letter-spacing: 1px;
-
-}
-.nav__list {
+body {
   margin: 0;
   padding: 0;
-  list-style: none;
+  box-sizing: border-box;
   display: flex;
-  flex-direction: column;
-  gap: 32px;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #f5f5f5;
 }
-/* endregion */
 
-/* #region footer */
-/* end #endregion */
-/* Menu (320) */
+.stars__container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100px;
+  height: 140px;
+  background-color: #fff;
+}
+
+.stars {
+  display: flex;
+  width: 96px;
+  height: 16px;
+  margin-bottom: 6px;
+  box-sizing: border-box;
+}
+
+.stars__star {
+  width: 16px;
+  height: 16px;
+  margin-left: 4px;
+  background-image: url('images/stars/Star\ \ don\'t\ active.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.block__star:last-child {
+  margin-right: 0;
+}
+
+.stars--0 .stars__star:nth-child(-n + 0),
+.stars--1 .stars__star:nth-child(-n + 1),
+.stars--2 .stars__star:nth-child(-n + 2),
+.stars--3 .stars__star:nth-child(-n + 3),
+.stars--4 .stars__star:nth-child(-n + 4),
+.stars--5 .stars__star:nth-child(-n + 5) {
+  background-image: url('images/stars/Star\ active.png');
+}
