--- a/style.css
+++ b/style.css
@@ -6,29 +6,34 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: #f5f5f5;
+  background-color: #000;
+  overflow: hidden;
 }
 
 .stars__container {
   display: flex;
   flex-wrap: wrap;
-  width: 100px;
-  height: 140px;
-  background-color: #fff;
+  width: 250px;
+  height: 120px;
+  position: relative;
 }
 
 .stars {
   display: flex;
-  width: 96px;
+  width: 160px;
   height: 16px;
-  margin-bottom: 6px;
+  margin-bottom: 4px;
   box-sizing: border-box;
 }
 
 .stars__star {
   width: 16px;
   height: 16px;
-  margin-left: 4px;
+  margin-left: 0;
+  background-color: #fff;
+
+  opacity: 0; /* Початкова прозорість */
+  animation: twinkle 2s infinite; /* Анімація мерехтіння */
   background-image: url('images/stars/Star\ \ don\'t\ active.png');
   background-size: cover;
   background-repeat: no-repeat;
@@ -38,11 +43,53 @@ body {
   margin-right: 0;
 }
 
-.stars--0 .stars__star:nth-child(-n + 0),
-.stars--1 .stars__star:nth-child(-n + 1),
-.stars--2 .stars__star:nth-child(-n + 2),
-.stars--3 .stars__star:nth-child(-n + 3),
-.stars--4 .stars__star:nth-child(-n + 4),
-.stars--5 .stars__star:nth-child(-n + 5) {
+.stars--0 .stars__star:nth-child(-n + 1),
+.stars--1 .stars__star:nth-child(-n + 3),
+.stars--2 .stars__star:nth-child(-n + 5),
+.stars--3 .stars__star:nth-child(-n + 7),
+.stars--4 .stars__star:nth-child(-n + 9),
+.stars--5 .stars__star:nth-child(-n + 10) {
   background-image: url('images/stars/Star\ active.png');
+}
+@keyframes twinkle {
+  0%, 100% {
+    opacity: 0.3; /* Мінімальна прозорість */
+    transform: scale(0.9); /* Зменшення */
+  }
+  50% {
+    opacity: 1; /* Повна прозорість */
+    transform: scale(1); /* Початковий розмір */
+  }
+}
+
+/* Рандомна затримка анімації для зірок */
+.stars__star:nth-child(1) {
+  animation-delay: 0.1s;
+}
+.stars__star:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.stars__star:nth-child(3) {
+  animation-delay: 0.3s;
+}
+.stars__star:nth-child(4) {
+  animation-delay: 0.4s;
+}
+.stars__star:nth-child(5) {
+  animation-delay: 0.5s;
+}
+.stars__star:nth-child(6) {
+  animation-delay: 0.6s;
+}
+.stars__star:nth-child(7) {
+  animation-delay: 0.7s;
+}
+.stars__star:nth-child(8) {
+  animation-delay: 0.8s;
+}
+.stars__star:nth-child(9) {
+  animation-delay: 0.9s;
+}
+.stars__star:nth-child(10) {
+  animation-delay: 1s;
 }
